--- a/index.html
+++ b/index.html
@@ -287,7 +287,10 @@
                 ><i class="fa-brands fa-x-twitter"></i
               ></a>
             </div>
-            <a href="./image/Web Developer Resume.pdf" download class="btn btn2"
+            <a
+              href="./image/Web Developer Resume 1.pdf"
+              download
+              class="btn btn2"
               >Download CV</a
             >
           </div>
