update work section

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
             <div class="tab-contents" id="education">
               <ul>
                 <li>
-                  <span>Graduate from</span><br /><br />Sindh Madrasatul Islam
-                  Karachi
+                  <span>Graduate from</span><br /><br />Government National
+                  College Karachi
                 </li>
                 <!-- <li><span>Web Development</span><br>Web App Development</li>
                             <li><span>App Development</span><br>Building Android/ios Apps</li> -->
@@ -210,43 +210,38 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
           <div class="work">
-            <img src="./image/work1.jpeg" alt="" />
+            <img src="./image/shoe13.jpeg" alt="" />
             <div class="layer">
-              <h3>Social Media App</h3>
+              <h3>Responsive Shoe Store</h3>
+              <p>A responsive shoe store website built with HTML and CSS.</p>
+              <a href="https://github.com/Salma-Shahid/Niker-Shoe-Website"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="./image/hero-img3.png" alt="" />
+            <div class="layer">
+              <h3>Responsive Perfume Shop</h3>
               <p>
-                The app connects you to the talented people around the world.
-                Download it from play store.
+                An elegant perfume shop website showcasing various fragrances built with HTML, CSS.
+              </p>
+              <a href="https://github.com/Salma-Shahid/Perfume-Shop"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="./image/Calculator.png" alt="" />
+            <div class="layer">
+              <h3>Calculator App</h3>
               </p>
               <a href="#"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
           </div>
-          <div class="work">
-            <img src="./image/work2.jpeg" alt="" />
-            <div class="layer">
-              <h3>Music App</h3>
-              <p>
-                The app connects you to the talented people around the world.
-                Download it from play store.
-              </p>
-              <a href="#"
-                ><i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </div>
-          </div>
-          <div class="work">
-            <img src="./image/work3.jpeg" alt="" />
-            <div class="layer">
-              <h3>Online Shopping App</h3>
-              <p>
-                The app connects you to the talented people around the world.
-                Download it from play store.
-              </p>
-              <a href="#"
-                ><i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </div>
+          
           </div>
         </div>
         <a href="#" class="btn">See more</a>
