--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
               ></a>
             </div>
             <a
-              href="./image/Web Developer Resume 1.pdf"
+              href="./image/Web Developer Resume.pdf"
               download
               class="btn btn2"
               >Download CV</a
