modified linkedin link

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
               <a href="https://www.instagram.com/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
-              <a href="https://www.linkedin.com/in/salma-shahid-90527022a/"
+              <a href="https://www.linkedin.com/in/salma-shahid"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
               <a href="https://x.com/salmashahid06"
